--- a/petstore-app/src/main/webapp/stylesheets/main.css
+++ b/petstore-app/src/main/webapp/stylesheets/main.css
@@ -1,412 +1,432 @@
+
+html {
+	height: 100%
+}
+
 body.petstore {
-    margin: 0 auto;
-    font: 100% "Georgia", "Arial", serif;
-}
-
-a {
-    text-decoration: none;
-}
-
-img {
-    border-width: 0;
-}
-
-table {
-    border-collapse: collapse;
-}
-
-th {
-    border-bottom: 1px solid black;
-    text-align: left;
-}
-
-.add-to-cart {
-    margin-right: 0;
-    font: 14px "Georgia", "Arial", serif;
-    padding: 5px 10px;
-    text-align: center;
-    color: black;
-    height: 30px;
-    background-color: #c6ee22;
-    border: solid #6a6a6a 2px;
-    cursor: pointer;
-    -moz-border-radius: 4px 4px 4px 4px;
-}
-
-.backgrounded {
-    background-color: #e1e1e1;
+	margin: 0 auto;
+	font: 100% "Georgia", "Arial", serif;
+	height: 100%;
 }
 
 .content {
-    width: 960px;
-    margin: 0 auto;
-    position: relative;
+	width: 960px;
+	position: relative;
+	margin: 0 auto;
+}
+
+a {
+	text-decoration: none;
+}
+
+img {
+	border-width: 0;
+}
+
+table {
+	border-collapse: collapse;
+}
+
+th {
+	border-bottom: 1px solid black;
+	text-align: left;
+}
+
+.add-to-cart {
+	margin-right: 0;
+	font: 14px "Georgia", "Arial", serif;
+	padding: 5px 10px;
+	text-align: center;
+	color: black;
+	height: 30px;
+	background-color: #c6ee22;
+	border: solid #6a6a6a 2px;
+	cursor: pointer;
+	-moz-border-radius: 4px 4px 4px 4px;
+}
+
+.backgrounded {
+	background-color: #e1e1e1;
 }
 
 .continue {
-    padding-top: 15px;
-    font-size: 14px;
-    color: #696969;
-    text-decoration: underline;
+	padding-top: 15px;
+	font-size: 14px;
+	color: #696969;
+	text-decoration: underline;
 }
 
 .count {
-    padding-left: 10px;
+	padding-left: 10px;
 }
 
 .errors li {
-    list-style-type: none;
-    color: red;
+	list-style-type: none;
+	color: red;
 }
 
 .overline {
-    border-top: solid #c6ee22 2px;
+	border-top: solid #c6ee22 2px;
 }
 
 .product-details {
-    float: left;
-    padding-top: 30px;
-    margin-left: 30px;
-    width: 210px;
+	float: left;
+	padding-top: 30px;
+	margin-left: 30px;
 }
 
 .product-description {
-    color: #414141;
-    vertical-align: 200%;
-    font-size: 16px;
+	color: #414141;
+	vertical-align: 200%;
+	font-size: 16px;
 }
 
 .title {
-    font-weight: bold;
-    margin-left: 0;
-    color: #84a208;
+	font-weight: bold;
+	margin-left: 0;
+	color: #84a208;
 }
 
 #cart-actions {
-    height: 40px;
-    margin-top: 45px;
-    margin-left: 550px;
+	height: 40px;
+	margin-top: 45px;
+	margin-left: 550px;
 }
 
 #order-actions {
-    margin-top: 45px;
-    margin-left: 188px;
-    margin-bottom: 40px;
+	margin-top: 45px;
+	margin-left: 188px;
+	margin-bottom: 40px;
 }
 
 #items-actions {
-    margin-top: 45px;
-    margin-left: 638px;
-    margin-bottom: 40px;
+	margin-top: 45px;
+	margin-left: 638px;
+	margin-bottom: 40px;
 }
 
 #receipt-actions {
-    margin-top: 45px;
-    margin-left: 0;
+	margin-top: 45px;
+	margin-left: 0;
 }
 
 #billing-address {
-    float: left;
+	float: left;
 }
 
-#billing-address span, #payment-details span {
-    margin-left: 140px;
+#billing-address span,#payment-details span {
+	margin-left: 140px;
 }
 
-#billing-address label, #payment-details label {
-    position: absolute;
+#billing-address label,#payment-details label {
+	position: absolute;
 }
 
-#billing-address ul, #payment-details ul {
-    list-style-type: none;
-    padding-left: 0;
+#billing-address ul,#payment-details ul {
+	list-style-type: none;
+	padding-left: 0;
 }
 
-#cart, #items {
-    padding-top: 90px;
-    min-height: 370px;
+#cart,#items {
+	padding-top: 90px;
+	min-height: 370px;
 }
 
-#cart-content, #inventory {
-    margin-top: 50px;
+#cart-content,#inventory {
+	margin-top: 50px;
 }
 
-#cart-content, #inventory, #order-details {
-    width: 85%;
+#cart-content,#inventory,#order-details {
+	width: 85%;
 }
 
-#cart-content th, #inventory th, #order-details th {
-    border: none;
-    font-weight: normal;
-    font-size: 22px;
-    height: 50px;
+#cart-content th,#inventory th,#order-details th {
+	border: none;
+	font-weight: normal;
+	font-size: 22px;
+	height: 50px;
 }
 
-#cart-content td, #inventory td {
-    padding-top: 2px;
-    padding-bottom: 4px;
+#cart-content td,#inventory td {
+	padding-top: 2px;
+	padding-bottom: 4px;
 }
 
 #cart-summary {
-    border-top: 3px double black;
-    height: 35px;
+	border-top: 3px double black;
+	height: 35px;
 }
 
 #cash {
-    margin-top: 80px;
-    min-height: 390px;
-    color: #333333;
+	margin-top: 80px;
+	min-height: 390px;
+	color: #333333;
 }
 
 #cash span {
-    margin-left: 40px;
-    font-size: 20px;
+	margin-left: 40px;
+	font-size: 20px;
 }
 
 #cash ul {
-    margin-top: 30px;
+	margin-top: 30px;
 }
 
 #cash ul li {
-    list-style-type: none;
-    padding-left: 0;
-    margin-top: 10px;
+	list-style-type: none;
+	padding-left: 0;
+	margin-top: 10px;
 }
 
-#cash input, select {
-    margin-left: 140px;
-    border: solid gray 1px;
-    -moz-border-radius: 4px 4px 4px 4px;
-    height: 23px;
-    width: 300px;
+#cash input,select {
+	margin-left: 140px;
+	border: solid gray 1px;
+	-moz-border-radius: 4px 4px 4px 4px;
+	height: 23px;
+	width: 300px;
 }
 
 #cash select {
-    width: 302px;
-    padding: 5px;
-    height: 30px;
+	width: 302px;
+	padding: 5px;
+	height: 30px;
 }
 
 #cash label {
-    position: absolute;
+	position: absolute;
 }
 
-#order-form .errors {
-    display: inline;
+#logout-box {
+	float: left;
 }
 
-#order-form .errors li {
-    display: inline;
-}
 
-#content {
-    min-height: 440px;
-    color: #84a208;
-}
-
-#content a {
-    color: black;
-}
-
-#content a:hover {
-    color: #84a208;
-}
-
-#content img {
-    border: solid #c5c5c5 1px;
-}
-
-#content span {
-    color: #414141;
-    vertical-align: 200%;
-    font-size: 16px;
-}
-
-#content div {
-    float: right;
-    padding-top: 30px;
-    padding-right: 60px;
-}
-
-#content ul li {
-    float: left;
-    width: 400px;
-    height: 152px;
-    list-style-type: none;
-    font-size: 26px;
-}
-
-#content ul {
-    padding-top: 75px;
-}
-
-#checkout, #order {
-    display: inline;
-    font: 14px "Georgia", "Arial", serif;
-    padding: 5px 10px;
-    margin-left: 50px;
-    text-align: center;
-    color: black;
-    background-color: #c6ee22;
-    border: solid #6a6a6a 2px;
-    -moz-border-radius: 4px 4px 4px 4px;
-}
-
-#order {
-    cursor: pointer;
-}
-
-#checkout a {
-    color: black;
-    cursor: pointer;
+#footer, .push {
+	height: 40px;
 }
 
 #footer {
-    width: 960px;
-    margin: 0 auto;
-    color: #a1a1a1;
+	width: 960px;
+	margin: 0 auto;
+	color: #a1a1a1;
+}
+
+#footer a, #footer span {
+	float: right;
+}
+
+#order-form .errors {
+	display: inline;
+}
+
+#order-form .errors li {
+	display: inline;
+}
+
+#content {
+	color: #84a208;
+}
+
+#content a {
+	color: black;
+}
+
+#content a:hover {
+	color: #84a208;
+}
+
+#content img {
+	border: solid #c5c5c5 1px;
+}
+
+#content span {
+	color: #414141;
+	vertical-align: 200%;
+	font-size: 16px;
+}
+
+#content div {
+	float: right;
+	padding-top: 30px;
+	padding-right: 60px;
+}
+
+#content ul li {
+	float: left;
+	width: 400px;
+	height: 152px;
+	list-style-type: none;
+	font-size: 26px;
+}
+
+#content ul {
+	padding-top: 75px;
+}
+
+#checkout, #order {
+	display: inline;
+	font: 14px "Georgia", "Arial", serif;
+	padding: 5px 10px;
+	margin-left: 50px;
+	text-align: center;
+	color: black;
+	background-color: #c6ee22;
+	border: solid #6a6a6a 2px;
+	-moz-border-radius: 4px 4px 4px 4px;
+}
+
+#order {
+	cursor: pointer;
+}
+
+#checkout a {
+	color: black;
+	cursor: pointer;
 }
 
 #footer img {
-    vertical-align: bottom;
-}
-
-#footer_text {
-    margin-left: 635px;
+	margin-bottom: 2px;
+    margin-left: 5px;
+    vertical-align: bottom
 }
 
 #header {
-    width: 100%;
-    height: 125px;
-    background: transparent url(../images/bg.png) repeat-x;
-    position: relative;
+	width: 100%;
+	height: 125px;
+	background: transparent url(../images/bg.png) repeat-x;
+	position: relative;
 }
 
 #header ul li {
-    display: inline;
-    margin-right: 30px;
+	display: inline;
+	margin-right: 30px;
 }
 
 #header ul {
-    position: absolute;
-    top: 73px;
-    left: 740px;
+	position: absolute;
+	top: 73px;
+	left: 740px;
 }
 
 #header ul li a {
-    color: black;
-    font-size: 17px;
+	color: black;
+	font-size: 17px;
 }
 
 #logout {
-    background: none;
-    border: none;
+	background: none;
+	border: none;
 }
 
 #products {
-    min-height: 440px;
-    color: #84a208;
+	min-height: 440px;
+	color: #84a208;
 }
 
 #products ul li {
-    float: left;
-    width: 400px;
-    height: 152px;
-    list-style-type: none;
-    font-size: 26px;
+	float: left;
+	width: 460px;
+	height: 152px;
+	list-style-type: none;
+	font-size: 26px;
 }
 
 #products ul {
-    padding-top: 75px;
+	padding-top: 15px;
 }
 
 #products a {
-    color: black;
+	color: black;
 }
 
 #products a:hover {
-    color: #84a208;
+	color: #84a208;
 }
 
 #products img {
-    float: left;
-    border: solid #c5c5c5 1px;
+	float: left;
+	border: solid #c5c5c5 1px;
 }
 
 #search-box input {
-    height: 24px;
-    position: absolute;
-    top: 29px;
-    left: 701px;
-    border: solid gray 2px;
-    -moz-border-radius: 4px 0 0 4px;
+	height: 24px;
+	position: absolute;
+	top: 29px;
+	left: 701px;
+	border: solid gray 2px;
+	-moz-border-radius: 4px 0 0 4px;
 }
 
 #search {
-    position: absolute;
-    width: 34px;
-    height: 30px;
-    padding: 0;
-    background-color: #c6ee22;
-    top: 29px;
-    left: 882px;
-    border: solid gray 2px;
-    -moz-border-radius: 0 4px 4px 0;
-    cursor: pointer;
+	position: absolute;
+	width: 34px;
+	height: 30px;
+	padding: 0;
+	background-color: #c6ee22;
+	top: 29px;
+	left: 882px;
+	border: solid gray 2px;
+	-moz-border-radius: 0 4px 4px 0;
+	cursor: pointer;
 }
 
 #search img {
-    padding-top: 2px;
+	padding-top: 2px;
 }
 
 #match-count {
-    color: #84a208;
+	color: #84a208;
 }
 
 #match-found {
-    margin-left: 40px;
-    padding-top: 35px;
-    color: black;
+	margin-left: 40px;
+	padding-top: 35px;
+	color: black;
 }
 
 #no-match {
-    margin-left: 40px;
-    padding-top: 35px;
-    color: black;
+	margin-left: 40px;
+	padding-top: 35px;
+	color: black;
 }
 
 #home-tab {
-    margin-top: -1px;
-    margin-left: 792px;
+	margin-top: -1px;
+	margin-left: 792px;
 }
 
 #cart-tab {
-    margin-top: -1px;
-    margin-left: 875px;
+	margin-top: -1px;
+	margin-left: 875px;
 }
 
 #order-number {
-    color: #84a208;
+	color: #84a208;
 }
 
 #order-summary {
-    border-top: 3px double black;
+	border-top: 3px double black;
 }
 
 #payment-details {
-    margin-left: 550px;
+	margin-left: 550px;
 }
 
 #receipt {
-    padding-top: 40px;
-    min-height: 420px;
+	padding-top: 40px;
+	min-height: 420px;
 }
 
 #receipt td {
-    height: 35px;
+	height: 35px;
 }
 
 #receipt table {
-    margin-top: 20px;
+	margin-top: 20px;
 }
 
+#wrapper {
+	min-height: 100%;
+	height: 100%;
+	margin: 0 auto -50px;
+}	
