Map "/" to home instead of using a default view to make it easier to implement inventory in class.
Renamed errors.properties to ValidationMessages.properties so that students can use that file for their custom errors.

Add a getMessage(String code) in MockRequestContext again to have less surprises during class when writing unit test for views dealing with validation errors

--- a/petstore-app/src/main/webapp/WEB-INF/views/decorators/_menu.vm
+++ b/petstore-app/src/main/webapp/WEB-INF/views/decorators/_menu.vm
@@ -1,7 +1,7 @@
 <ul>
 	#set ($section = $page.getProperty("meta.section"))
 	<li #if (!$section) class="overline" #end>
-	<a href="$base/home">Home</a></li>
+	<a href="$base">Home</a></li>
 	
 	##  Spring aop proxy prefix bean names with scopedTarget
     #set( $cart = $session.getAttribute('scopedTarget.cart') )
