--- a/petstore-app/src/main/webapp/WEB-INF/views/cart.vm
+++ b/petstore-app/src/main/webapp/WEB-INF/views/cart.vm
@@ -1,7 +1,7 @@
 <html>
 <head>
     <title>PetStore - Cart content</title>
-    <meta name="section" content="cart">
+    <meta name="section" content="cart"/>
 </head>
 <body>
 	<div id="cart"> 
