Make context path truly configurable.
Velocity toolbox configuration file now loaded from classpath to allow maven resource filtering.
Adjustments to the way urls are computed to support empty context path.

--HG--
rename : petstore-app/src/main/webapp/WEB-INF/tools.xml => petstore-app/src/main/resources/tools.xml
rename : petstore-system-tests/src/test/java/test/support/com/pyxis/petstore/web/Routes.java => petstore-system-tests/src/test/java/test/support/com/pyxis/petstore/web/Routing.java

--- a/petstore-app/src/main/webapp/WEB-INF/views/products.vm
+++ b/petstore-app/src/main/webapp/WEB-INF/views/products.vm
@@ -16,7 +16,7 @@
         #foreach ($product in $productList)
             <li id="product-$product.number">
                 <a class="product-link" href="$base/products/$product.number/items">
-                    <img src="$base$attachments.getAttachmentUrl($product)"/></a>
+                    <img src="$base/$attachments.getAttachmentUri($product)"/></a>
 
                 <div class='product-details'>
                     <a href="$base/products/$product.number/items"><span class="product-name">$product.name</span></a>
