Make site navigation work when using empty context path
--HG--
rename : petstore-system-tests/src/test/java/test/system/com/pyxis/petstore/BrowseCatalogFeature.java => petstore-system-tests/src/test/java/test/system/com/pyxis/petstore/SiteNavigationFeature.java

--- a/petstore-app/src/main/webapp/WEB-INF/views/cart.vm
+++ b/petstore-app/src/main/webapp/WEB-INF/views/cart.vm
@@ -37,7 +37,7 @@
 		</tr>
 	 </table>
 	 <div id="cart-actions">
-		<a id="continue-shopping" class="continue" href="$base">&laquo; continue shopping</a>
+		<a id="continue-shopping" class="continue" href="$base/">&laquo; continue shopping</a>
 		<div id="checkout"><a href="$base/checkout">Checkout</a></div>
 	 </div>
 
