--- a/petstore-app/src/main/webapp/WEB-INF/views/receipts/show.vm
+++ b/petstore-app/src/main/webapp/WEB-INF/views/receipts/show.vm
@@ -71,7 +71,7 @@
     </div>
 
     <div id="receipt-actions">
-        <a id="continue-shopping" class="continue" href="$base">&laquo; continue shopping</a>
+        <a id="continue-shopping" class="continue" href="$base/">&laquo; continue shopping</a>
     </div>
 </div>
 </body>
