Capitalize site page titles

--- a/petstore-app/src/main/webapp/WEB-INF/views/cart.vm
+++ b/petstore-app/src/main/webapp/WEB-INF/views/cart.vm
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>PetStore - Cart content</title>
+    <title>PetStore - Shopping Cart</title>
     <meta name="section" content="cart"/>
 </head>
 <body>
