--- a/petstore-app/src/main/webapp/WEB-INF/views/receipts/show.vm
+++ b/petstore-app/src/main/webapp/WEB-INF/views/receipts/show.vm
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>PetStore - Order receipt</title>
+    <title>PetStore - Order Receipt</title>
 </head>
 <body>
 <div id="receipt">
