Test going back to home page when viewing inventory

--- a/petstore-app/src/main/webapp/WEB-INF/views/items.vm
+++ b/petstore-app/src/main/webapp/WEB-INF/views/items.vm
@@ -31,7 +31,7 @@
 		 </table>
 	 #end
 	 <div id="items-actions">
-		<a class="continue" href="$base">&laquo; continue shopping</a>
+		<a id="continue-shopping" class="continue" href="$base/">&laquo; continue shopping</a>
 	 </div>
 </div>
 </body>
