Proper html formatting when internal server error occurs
--HG--
rename : webapp/src/main/resources/templates/main.html => webapp/src/main/resources/templates/layout/main.html

--- a/webapp/src/main/resources/templates/layout/main.html
+++ b/webapp/src/main/resources/templates/layout/main.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
   <meta content="text/html;charset=UTF-8" http-equiv="Content-Type"/>
@@ -7,6 +8,6 @@
   <form action="/logout" method="post">
     <input type="hidden" name="_method" value="delete"/>
     <button id="logout"></button>
-  </form>
+</form>
 </body>
 </html>
