--- a/webapp/src/main/resources/templates/layout/main.html
+++ b/webapp/src/main/resources/templates/layout/main.html
@@ -5,9 +5,6 @@
   <title>{{title}}</title>
 </head>
 <body>
-  <form action="/logout" method="post">
-    <input type="hidden" name="_method" value="delete"/>
-    <button id="logout"></button>
-</form>
+   {{>layout/_logout}}
 </body>
 </html>
