Consolidate partials into header and footer templates.
Ensure html is pretty-printed for easier diagnostics.

--HG--
rename : webapp/src/main/resources/templates/layout/_logout.html => webapp/src/main/resources/templates/layout/footer.html
rename : webapp/src/main/resources/templates/layout/_logo.html => webapp/src/main/resources/templates/layout/header.html
rename : webapp/src/test/java/test/org/testinfected/petstore/templates/LogoutTemplateTest.java => webapp/src/test/java/test/org/testinfected/petstore/templates/FooterTest.java
rename : webapp/src/test/java/test/org/testinfected/petstore/templates/LogoTemplateTest.java => webapp/src/test/java/test/org/testinfected/petstore/templates/HeaderTest.java

--- a/webapp/src/main/resources/templates/layout/main.html
+++ b/webapp/src/main/resources/templates/layout/main.html
@@ -8,27 +8,17 @@
 </head>
 <body class="petstore">
 <div id="wrapper">
-  <div id="header">
-    <div class="content">
-      <div id="logo">
-        {{>layout/_logo}}
-      </div>
-    </div>
-  </div>
+<div id="header">
+{{>layout/header}}
+</div>
 
-  <div class="content">
-  </div>
+<div class="content"></div>
 
-  <div class="push"></div>
+<div class="push"></div>
 </div>
 
 <div id="footer">
-  <hr/>
-  <div id="logout-box">
-    {{>layout/_logout}}
-  </div>
-  <a href="https://github.com/testinfected/simple-petstore"><img src="/images/github.png"/></a>
-  <span>jPetStore &copy; 2012 - Vincent Tencé @</span>
+{{>layout/footer}}
 </div>
 </body>
 </html>
