--- a/webapp/src/main/resources/templates/layout/main.html
+++ b/webapp/src/main/resources/templates/layout/main.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <link href="/stylesheets/petstore.css" media="screen" rel="stylesheet" type="text/css"/>
-  <link rel="shortcut icon" href="/images/favicon.ico"/>
+  <link rel="shortcut icon" href="/favicon.ico"/>
   <title>{{title}}</title>
 </head>
 <body class="petstore">
