--- a/webapp/src/main/webapp/templates/layout/header.html
+++ b/webapp/src/main/webapp/templates/layout/header.html
@@ -4,4 +4,12 @@
       <img alt="JPetStore" src="/images/logo.png"/>
     </a>
   </div>
+  <div id="search-box">
+    <form action="/products" method="get">
+      <input id="keyword" name="keyword" type="text" size="20"/>
+      <button id="search">
+        <img src="/images/magnifier.png"/>
+      </button>
+    </form>
+  </div>
 </div>
