Simplistic disaptch implementation to start exploring design options
--HG--
rename : webapp/src/main/java/org/testinfected/petstore/decoration/RequestMatcher.java => webapp/src/main/java/org/testinfected/petstore/util/RequestMatcher.java
rename : webapp/src/main/webapp/templates/pages/home.html => webapp/src/main/webapp/templates/pages/products.html

--- a/webapp/src/main/webapp/templates/layout/footer.html
+++ b/webapp/src/main/webapp/templates/layout/footer.html
@@ -1,8 +1,8 @@
 <hr/>
 <div id="logout-box">
-  <form id="logout" action="/logout" method="post">
+  <form action="/logout" method="post">
     <input type="hidden" name="_method" value="delete"/>
-    <button></button>
+    <button id="logout"></button>
   </form>
 </div>
 <a href="https://github.com/testinfected/simple-petstore"><img src="/images/github.png"/></a>
