--- a/webapp/src/main/webapp/templates/layout/main.html
+++ b/webapp/src/main/webapp/templates/layout/main.html
@@ -11,7 +11,7 @@
 {{>layout/header}}
 </div>
 
-<div class="content"></div>
+<div class="content">{{{body}}}</div>
 
 <div class="push"></div>
 </div>
