Remove obsolete dispatch code, introduce mock request to simplify testing and make endpoints unware of templates relative locations.
--HG--
rename : webapp/src/test/java/test/integration/org/testinfected/petstore/endpoints/ShowProductsTest.java => webapp/src/test/java/test/unit/org/testinfected/petstore/endpoints/ShowProductsTest.java

--- a/webapp/src/main/webapp/templates/layout/main.html
+++ b/webapp/src/main/webapp/templates/layout/main.html
@@ -8,7 +8,7 @@
 <body class="petstore">
 <div id="wrapper">
 <div id="header">
-{{>layout/header}}
+{{>header}}
 </div>
 
 <div class="content">{{{body}}}</div>
@@ -17,7 +17,7 @@
 </div>
 
 <div id="footer">
-{{>layout/footer}}
+{{>footer}}
 </div>
 </body>
 </html>
