Search scenario pass, but this is far from done.
Next to do:
- Integrate database migrations
- Parametrize PetStore with database configuration
- Complete products page, which will probably require changing the mustache engine to one that support lambdas
- Scope database connection by http request
- Use a REST api to create data during end-to-end tests

--- a/webapp/src/main/webapp/templates/pages/products.html
+++ b/webapp/src/main/webapp/templates/pages/products.html
@@ -4,7 +4,26 @@
 </head>
 <body>
 <div id="products">
+  {{^products}}
   <div id="no-match">No product was found</div>
+  {{/products}}
+  <ul id="catalog">
+  {{#products}}
+  {{#-first}}
+  <div id="match-found">Found <span id="match-count">{{productCount}}</span> result(s) for {{keyword}}</div>
+  {{/-first}}
+  <li id="product-{{number}}">
+    <div class='product-details'>
+      <span class="product-name">{{name}}</span>
+      <br/>
+      <span class="product-description">{{#description}}{{.}}{{/description}}</span>
+    </div>
+  </li>
+  {{/products}}
+  </ul>
 </div>
+
+</div>
+
 </body>
 </html>
