--- a/webapp/src/main/webapp/templates/pages/products.html
+++ b/webapp/src/main/webapp/templates/pages/products.html
@@ -4,26 +4,19 @@
 </head>
 <body>
 <div id="products">
-  {{^products}}
-  <div id="no-match">No product was found</div>
-  {{/products}}
+  <div id="match-found">Found <span id="match-count">{{matchCount}}</span> product(s) for "{{keyword}}"</div>
+
   <ul id="catalog">
   {{#products}}
-  {{#-first}}
-  <div id="match-found">Found <span id="match-count">{{productCount}}</span> result(s) for {{keyword}}</div>
-  {{/-first}}
-  <li id="product-{{number}}">
-    <div class='product-details'>
-      <span class="product-name">{{name}}</span>
-      <br/>
-      <span class="product-description">{{#description}}{{.}}{{/description}}</span>
-    </div>
-  </li>
+    <li id="product-{{number}}">
+      <div class='product-details'>
+        <span class="product-name">{{name}}</span>
+        <br/>
+        <span class="product-description">{{description}}</span>
+      </div>
+    </li>
   {{/products}}
   </ul>
 </div>
-
-</div>
-
 </body>
 </html>
