Display photos of products on product page, but styling is missing and photo file name is not read from database
--HG--
rename : oldapp/src/main/webapp/attachments/products/missing.png => webapp/src/main/webapp/assets/photos/missing.png

--- a/webapp/src/main/webapp/templates/pages/products.html
+++ b/webapp/src/main/webapp/templates/pages/products.html
@@ -10,6 +10,9 @@
   {{#products}}
     <li id="product-{{number}}">
       <div class='product-details'>
+        <a class="product-link" href="/products/{{number}}/items">
+          <img src="{{photo}}"/>
+        </a>
         <span class="product-name">{{name}}</span>
         <br/>
         <span class="product-description">{{description}}</span>
