Improve some of the tests
--HG--
rename : webapp/src/main/webapp/templates/pages/no-product.html => webapp/src/main/webapp/templates/pages/no-results.html
rename : webapp/src/test/java/test/unit/org/testinfected/petstore/templates/NoProductPageTest.java => webapp/src/test/java/test/unit/org/testinfected/petstore/templates/NoSearchResultsPageTest.java

--- a/webapp/src/main/webapp/templates/pages/products.html
+++ b/webapp/src/main/webapp/templates/pages/products.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 <div id="products">
-  <div id="match-found">Found <span id="match-count">{{matchCount}}</span> product(s) for "{{keyword}}"</div>
+  <div id="match-found"><span id="match-count">{{matchCount}}</span> result(s)</div>
 
   <ul id="catalog">
   {{#products}}
