--- a/webapp/src/main/webapp/templates/pages/products.html
+++ b/webapp/src/main/webapp/templates/pages/products.html
@@ -11,7 +11,7 @@
     <li id="product-{{number}}">
       <div class='product-details'>
         <a class="product-link" href="/products/{{number}}/items">
-          <img src="{{photo}}"/>
+          <img src="{{#photo}}{{photoFileName}}{{/photo}}"/>
         </a>
         <span class="product-name">{{name}}</span>
         <br/>
