--- a/webapp/src/main/webapp/templates/pages/no-results.html
+++ b/webapp/src/main/webapp/templates/pages/no-results.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 <div id="products">
-  <div id="no-match">Your search for <em>{{keyword}}</em> did not match any products</div>
+  <div id="no-match">Your search for "<em>{{keyword}}</em>" did not match any products.</div>
 </div>
 </body>
 </html>
