When we start shopping, the shopping cart is empty

--- a/webapp/src/main/webapp/app/layout/header.html
+++ b/webapp/src/main/webapp/app/layout/header.html
@@ -12,4 +12,12 @@
       </button>
     </form>
   </div>
+  <div id="menu">
+    <ul>
+      <li id="shopping-cart">
+      Cart (0)
+      </li>
+    </ul>
+  </div>
+</div>
 </div>
