We display the number of items in the cart in the header, but the cart is always empty
--HG--
rename : webapp/src/main/java/org/testinfected/petstore/decoration/LayoutTemplate.java => webapp/src/main/java/org/testinfected/petstore/decoration/Template.java
rename : webapp/src/main/java/org/testinfected/petstore/decoration/Layout.java => webapp/src/main/java/org/testinfected/petstore/decoration/View.java

--- a/webapp/src/main/webapp/app/layout/header.html
+++ b/webapp/src/main/webapp/app/layout/header.html
@@ -15,7 +15,9 @@
   <div id="menu">
     <ul>
       <li id="shopping-cart">
-      Cart (0)
+      {{#cart}}
+        Cart ({{totalQuantity}})
+      {{/cart}}
       </li>
     </ul>
   </div>
