We can now review the cart content from the menu

--- a/webapp/src/main/webapp/app/layout/header.html
+++ b/webapp/src/main/webapp/app/layout/header.html
@@ -16,7 +16,12 @@
     <ul>
       <li id="shopping-cart">
       {{#cart}}
-        Cart ({{totalQuantity}})
+        {{#empty}}
+        Cart (0)
+        {{/empty}}
+        {{^empty}}
+        <a href="/cart" id="view_cart">Cart ({{totalQuantity}})</a>
+        {{/empty}}
       {{/cart}}
       </li>
     </ul>
