--- a/webapp/src/main/webapp/public/stylesheets/petstore.css
+++ b/webapp/src/main/webapp/public/stylesheets/petstore.css
@@ -44,15 +44,21 @@ body.petstore {
 	position: relative;
 }
 
+#header ul {
+	position: absolute;
+	top: 73px;
+	left: 740px;
+}
+
 #header ul li {
 	display: inline;
 	margin-right: 30px;
 }
 
-#header ul {
-	position: absolute;
-	top: 73px;
-	left: 740px;
+#header ul li a {
+	color: black;
+	font-size: 17px;
+	text-decoration: underline;
 }
 
 #content {
