We can now shop for items and them to our cart

--- a/webapp/src/main/webapp/app/layout/header.html
+++ b/webapp/src/main/webapp/app/layout/header.html
@@ -20,7 +20,7 @@
         Cart (0)
         {{/empty}}
         {{^empty}}
-        <a href="/cart" id="view_cart">Cart ({{totalQuantity}})</a>
+        <a href="/cart">Cart ({{totalQuantity}})</a>
         {{/empty}}
       {{/cart}}
       </li>
