We can now jump to cart content or back home using the menu.
HtmlDocumentProcessor is smarter than before. It extracts head without the title, extract the title on its own, and extract meta data.

--HG--
rename : oldapp/src/main/webapp/images/tab.png => webapp/src/main/webapp/public/images/tab.png

--- a/webapp/src/main/webapp/public/stylesheets/petstore.css
+++ b/webapp/src/main/webapp/public/stylesheets/petstore.css
@@ -58,7 +58,6 @@ body.petstore {
 #header ul li a {
 	color: black;
 	font-size: 17px;
-	text-decoration: underline;
 }
 
 #content {
@@ -107,6 +106,24 @@ body.petstore {
 
 #search img {
 	padding-top: 2px;
+}
+
+#home.overline, #shopping-cart.overline.cart {
+	border-top: solid #c6ee22 2px;
+}
+
+#home.overline.cart, #shopping-cart.overline {
+	border-top: none;
+}
+
+#tab {
+	margin-top: -1px;
+	margin-left: 792px;
+}
+
+#tab.cart {
+	margin-top: -1px;
+	margin-left: 875px;
 }
 
 #products {
