--- a/webapp/src/main/webapp/app/layout/header.html
+++ b/webapp/src/main/webapp/app/layout/header.html
@@ -14,16 +14,22 @@
   </div>
   <div id="menu">
     <ul>
-      <li id="shopping-cart">
+      <li id="home" class="overline {{meta[section]}}">
+        <a href="/">Home</a>
+      </li>
       {{#cart}}
+      <li id="shopping-cart" class="overline {{meta[section]}}">
         {{#empty}}
         Cart (0)
         {{/empty}}
         {{^empty}}
         <a href="/cart">Cart ({{totalQuantity}})</a>
         {{/empty}}
-      {{/cart}}
       </li>
+      {{/cart}}
     </ul>
+    <div id="tab" class="{{meta[section]}}">
+      <img src="/images/tab.png"/>
+    </div>
   </div>
 </div>
