Don't repeat PetStore in every template title

--- a/webapp/src/main/webapp/app/layout/main.html
+++ b/webapp/src/main/webapp/app/layout/main.html
@@ -3,7 +3,7 @@
 <head>
   <link href="/stylesheets/petstore.css" media="screen" rel="stylesheet" type="text/css"/>
   <link rel="shortcut icon" href="/favicon.ico"/>
-  <title>{{title}}</title>
+  <title>PetStore - {{title}}</title>
 </head>
 <body class="petstore">
 <div id="wrapper">
