Add page head when rendering site layout

--- a/webapp/src/main/webapp/app/layout/main.html
+++ b/webapp/src/main/webapp/app/layout/main.html
@@ -3,6 +3,7 @@
 <head>
   <link href="/stylesheets/petstore.css" media="screen" rel="stylesheet" type="text/css"/>
   <link rel="shortcut icon" href="/favicon.ico"/>
+{{{head}}}
   <title>PetStore - {{title}}</title>
 </head>
 <body class="petstore">
@@ -11,7 +12,9 @@
 {{>header}}
 </div>
 
-<div class="content">{{{body}}}</div>
+<div class="content">
+{{{body}}}
+</div>
 
 <div class="push"></div>
 </div>
