Replace usage of map when rendering site layout, header and footer

--- a/webapp/src/main/webapp/app/layout/footer.html
+++ b/webapp/src/main/webapp/app/layout/footer.html
@@ -5,5 +5,5 @@
     <button id="logout"></button>
   </form>
 </div>
-<a href="https://github.com/testinfected/simple-petstore"><img src="/images/github.png"/></a>
+<a href="https://github.com/testinfected/simple-petstore"><img src="/images/github.png" alt="GitHub"/></a>
 <span>jPetStore &copy; 2012 - Vincent Tencé @</span>
