Replace Windowlicker with Mario for driving browser asynchronously

--- a/webapp/src/main/content/views/pages/checkout.html
+++ b/webapp/src/main/content/views/pages/checkout.html
@@ -52,7 +52,7 @@
     <fieldset class="actions">
       <ol>
         <li><a class="cancel" href="/">&laquo; continue shopping</a></li>
-        <li><button class="confirm">Submit order</button></li>
+        <li><button type="submit" class="confirm">Submit order</button></li>
       </ol>
     </fieldset>
   </form>
